[gd_scene load_steps=2 format=3 uid="uid://di2rgjpkv0c11"]

[ext_resource type="Script" path="res://src/ui/components/label_avatar_name/label_avatar_name.gd" id="1_pplfg"]

[node name="LabelAvatarName" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 81.0
offset_bottom = 20.0
mouse_filter = 2
script = ExtResource("1_pplfg")
hbox_alignament = 1

[node name="Container_Label" type="HBoxContainer" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/separation = 0
alignment = 1

[node name="Label_Name" type="Label" parent="Container_Label"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 16
text = "Kiko"
vertical_alignment = 1

[node name="Label_Subaddress" type="Label" parent="Container_Label"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.501961, 0.501961, 0.501961, 1)
theme_override_font_sizes/font_size = 16
text = "#1234"
vertical_alignment = 1
